--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-MIN = 2;
-MAX = 5;
+MIN = 10;
+MAX = 80;
+MAX_NUMBER_REPEAT = 1;
+MIN_NUMBER_REPEAT = 4;
+MAXBETWEEN = 3;
+MINBETWEEN = 8;
+MAX_GAS_GWEI = 10;
